--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "social-feed-feeder",
-  "version": "1.0.0",
+  "version": "1.0.23",
   "description": "A buffer feed feeder for social marketers",
   "main": "server.js",
+  "homepage": "https://social-feed-feeder.herokuapp.com/",
+  "repository": "https://gihub.com/tonyedwardspz/social-feed-feeder",
   "scripts": {
     "start": "node server.js",
     "test": "mocha test"
@@ -10,21 +12,17 @@
   "author": "tonyedwardspz",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-es2015": "^6.0.15",
-    "babelify": "^7.2.0",
-    "browserify": "^11.2.0",
+    "babel-preset-es2015": "^6.16.0",
     "del": "^2.0.2",
     "express": "^4.13.3",
-    "gcloud": "^0.24.1",
     "glob": "^5.0.15",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^1.0.0",
+    "gulp-concat": "^2.6.0",
     "gulp-env": "^0.2.0",
-    "gulp-eslint": "^1.0.0",
-    "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
-    "gulp-license": "^1.0.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-nodemon": "^2.0.4",
@@ -32,16 +30,13 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
+    "mocha": "^3.1.2",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
     "slm": "^0.5.1",
     "sw-precache": "^2.2.0",
     "vinyl-source-stream": "^1.1.0"
-  },
-  "devDependencies": {
-    "mocha": "^3.1.2"
   }
 }
