--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 before_deploy:
   - test $TRAVIS_TEST_RESULT = 0
-  - gulp build
+  - gulp
 deploy:
   provider: heroku
   api_key:
