--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "https://gihub.com/tonyedwardspz/social-feed-feeder",
   "scripts": {
     "start": "node server.js",
-    "test": "mocha test"
+    "test": "mocha test",
+    "postinstall": "gulp"
   },
   "author": "tonyedwardspz",
   "license": "MIT",
