--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "6.9.1"
+  },
   "name": "social-feed-feeder",
   "version": "1.0.32",
   "description": "A buffer feed feeder for social marketers",
