--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "engines": {
-    "node": "6.9.1"
+    "node": "6.9.1",
+    "npm": "3.10.8"
   },
   "name": "social-feed-feeder",
   "version": "1.0.32",
