--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "npm": "3.10.8"
   },
   "name": "social-feed-feeder",
-  "version": "1.0.32",
+  "version": "1.0.33",
   "description": "A buffer feed feeder for social marketers",
   "main": "server.js",
   "homepage": "https://social-feed-feeder.herokuapp.com/",
@@ -43,5 +43,8 @@
     "slm": "^0.5.1",
     "sw-precache": "^2.2.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
