--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "author": "tonyedwardspz",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-es2015": "^6.16.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "del": "^2.0.2",
     "express": "^4.13.3",
     "glob": "^5.0.15",
@@ -42,6 +45,7 @@
     "run-sequence": "^1.1.4",
     "slm": "^0.5.1",
     "sw-precache": "^2.2.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
