--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "del": "^2.0.2",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "glob": "^5.0.15",
     "gulp": "^3.9.0",
@@ -41,6 +42,7 @@
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.6",
     "mocha": "^3.1.2",
+    "mongodb": "^2.2.11",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
     "slm": "^0.5.1",
