--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "cookie-parser": "^1.4.3",
     "del": "^2.0.2",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
@@ -43,6 +44,10 @@
     "gulp-util": "^3.0.6",
     "mocha": "^3.1.2",
     "mongodb": "^2.2.11",
+    "mongoose": "^4.6.5",
+    "passport": "^0.3.2",
+    "passport-bufferapp": "^0.1.1",
+    "request": "^2.76.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
     "slm": "^0.5.1",
