--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "body-parser": "^1.15.2",
     "browserify": "^13.1.1",
     "cookie-parser": "^1.4.3",
     "del": "^2.0.2",
@@ -50,7 +51,6 @@
     "request": "^2.76.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
-    "slm": "^0.5.1",
     "sw-precache": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
