--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.1.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "del": "^2.0.2",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
+    "express-session": "^1.14.2",
     "glob": "^5.0.15",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
