Fixes lint errors in gulp & test tasks

--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,9 @@
     "require": true,
     "module": true,
 
+    "describe": true,
+    "it": true,
+
     "Campaign": true,
     "Bucket": true,
     "Post": true,
