--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.4",
     "sw-precache": "^2.2.0",
+    "twitter-text": "^1.14.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
