--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
     "gulp-nodemon": "^2.0.4",
+    "gulp-qunit": "^1.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
