Adds really basic form validation

--- a/.jshintrc
+++ b/.jshintrc
@@ -16,12 +16,14 @@
     "getBreadcrumbs": true,
     "convertDateToLocale": true,
     "convertDateForInput": true,
+    "getDefaultDate": true,
     "addRoutes": true,
     "getDateOneYearAgo": true,
     "twttr": true,
     "updateCharCount": true,
     "linkTweets": true,
     "getCharCount": true,
+    "inputsHaveValues": true,
 
     "require": true,
     "module": true,
