Adds basic date validation

--- a/.jshintrc
+++ b/.jshintrc
@@ -24,6 +24,8 @@
     "linkTweets": true,
     "getCharCount": true,
     "inputsHaveValues": true,
+    "highlightErrors": true,
+    "isDateAfterToday": true,
 
     "require": true,
     "module": true,
