--- a/.jshintrc
+++ b/.jshintrc
@@ -26,6 +26,11 @@
     "inputsHaveValues": true,
     "highlightErrors": true,
     "isDateAfterToday": true,
+    "defaultDateInputMin": true,
+    "defaultDateInputMax": true,
+    "registerTwiiterInputDetection": true,
+    "setupPopStateListener": true,
+    "loadContent": true,
 
     "require": true,
     "module": true,
