Adds basic image uploading

--- a/.jshintrc
+++ b/.jshintrc
@@ -33,6 +33,7 @@
     "loadContent": true,
     "getCookie": true,
     "updateBrowserHistory": true,
+    "readImageFile": true,
 
     "require": true,
     "module": true,
