--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "express-session": "^1.14.2",
+    "formidable": "^1.0.17",
     "glob": "^5.0.15",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
