Adds assignment of random name
This prevents filename clashes

--- a/.jshintrc
+++ b/.jshintrc
@@ -34,6 +34,8 @@
     "getCookie": true,
     "updateBrowserHistory": true,
     "readImageFile": true,
+    "_root": true,
+    "getRandomFileName": true,
 
     "require": true,
     "module": true,
