--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,29 +1,55 @@
 {
   "name": "Social Feed Feeder",
   "short_name": "Social Feeder",
-  "icons": [{
-    "src": "images/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    }, {
-      "src": "images/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    }, {
-      "src": "images/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    }, {
-      "src": "images/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }, {
-      "src": "images/icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    }],
+  "icons": [
+    {
+			"src": "images\/icons\/android-chrome-36x36.png",
+			"sizes": "36x36",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-48x48.png",
+			"sizes": "48x48",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-72x72.png",
+			"sizes": "72x72",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-96x96.png",
+			"sizes": "96x96",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-144x144.png",
+			"sizes": "144x144",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-192x192.png",
+			"sizes": "192x192",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-256x256.png",
+			"sizes": "256x256",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-384x384.png",
+			"sizes": "384x384",
+			"type": "image\/png"
+		},
+		{
+			"src": "images\/icons\/android-chrome-512x512.png",
+			"sizes": "512x512",
+			"type": "image\/png"
+		}
+  ],
   "start_url": "/index.html?installed",
   "display": "standalone",
-  "background_color": "#3E4EB8",
-  "theme_color": "#2F3BA2"
+  "background_color": "#66A2F5",
+  "theme_color": "#66A2F5"
 }
