--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mongoose": "^4.6.5",
     "passport": "^0.3.2",
     "passport-bufferapp": "^0.1.1",
+    "pushpad": "^0.3.1",
     "read-multiple-files": "^1.1.1",
     "request": "^2.76.0",
     "require-dir": "^0.3.0",
