Fixes campaign deletion bug

--- a/.jshintrc
+++ b/.jshintrc
@@ -41,6 +41,7 @@
     "caches": true,
     "importScripts": true,
     "goog": true,
+    "setupServiceWorker": true,
 
     "updateGoogleAnalytics": true,
     "ga": true,
@@ -67,11 +68,13 @@
     "PostController": true,
     "UserController": true,
     "DashboardController": true,
+    "PublishController": true,
 
     "CampaignView": true,
     "BucketView": true,
     "PostView": true,
     "UserView": true,
-    "DashboardView": true
+    "DashboardView": true,
+    "PublishView": true
   }
 }
