--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babelify": "^7.3.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.1.1",
+    "cloudinary": "^1.4.6",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "del": "^2.0.2",
