--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browserify": "^13.1.1",
     "buffer-node": "^1.0.2",
     "cloudinary": "^1.4.6",
+    "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "del": "^2.0.2",
